[gd_scene load_steps=8 format=3 uid="uid://dem3y52yeiikl"]

[ext_resource type="Texture2D" uid="uid://bf7yte0qxq3mi" path="res://asdasd.svg" id="1_k2pe2"]
[ext_resource type="Script" path="res://TileMap.gd" id="2_xxcn1"]
[ext_resource type="Script" path="res://Player.gd" id="3_3ao6u"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k7rdf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e4l0g"]
texture = ExtResource("1_k2pe2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_w0dvt"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_k7rdf")
sources/0 = SubResource("TileSetAtlasSource_e4l0g")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rncpf"]
size = Vector2(50, 50)

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w0dvt")
cell_quadrant_size = 64
format = 2
script = ExtResource("2_xxcn1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Player" type="Node2D" parent="."]
z_index = 1
position = Vector2(-73, 141)
script = ExtResource("3_3ao6u")

[node name="Sprite" type="Sprite2D" parent="Player"]
modulate = Color(0.788235, 0.00392157, 0.603922, 1)
texture = ExtResource("1_k2pe2")

[node name="Sprite2" type="Sprite2D" parent="Player"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(0.109375, 1)
texture = ExtResource("1_k2pe2")
offset = Vector2(0, -32)

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("RectangleShape2D_rncpf")

[node name="Pivots" type="Node2D" parent="Player"]

[node name="Pivot1" type="Sprite2D" parent="Player/Pivots"]
modulate = Color(1, 1, 0, 1)
z_index = 1
position = Vector2(32, -32)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_k2pe2")

[node name="Pivot2" type="Sprite2D" parent="Player/Pivots"]
modulate = Color(0, 0, 1, 1)
z_index = 1
position = Vector2(32, 32)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_k2pe2")

[node name="Pivot3" type="Sprite2D" parent="Player/Pivots"]
modulate = Color(1, 0, 0, 1)
z_index = 1
position = Vector2(-32, 32)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_k2pe2")

[node name="Pivot4" type="Sprite2D" parent="Player/Pivots"]
modulate = Color(0, 1, 0, 1)
z_index = 1
position = Vector2(-32, -32)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_k2pe2")

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_entered"]
